--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,3 +31,14 @@ h3 {
   box-shadow: rgba(50, 50, 93, 0.1) 0 7px 14px, rgba(0, 0, 0, 0.08) 0 3px 6px;
   transform: translateY(-2px);
 }
+.hover-up-sm {
+  transition-delay: 0s;
+  transition-duration: 250ms;
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover-up-sm:hover {
+  box-shadow: rgba(50, 50, 93, 0.1) 0 7px 14px, rgba(0, 0, 0, 0.08) 0 3px 6px;
+  transform: translateY(-1px);
+}
